# evm-hound-rs

./: Cargo.toml  README.md
examples/: basic.rs  contract_type.rs  disasm_only.rs  presave_bytecode.rs
src/: contract_types.rs  disasm.rs  lib.rs  main.rs  opcodes.rs  selectors.rs  utils.rs
